--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="styles.css" rel="stylesheet" >
+    <link rel="stylesheet" href="/css/styles.css"/>
     <title>Thermostat</title>
   </head>
   <body>
+      <h1>My thermostat</h1>
     <section>
       <h1 id="temperature"></h1>
       <p>
@@ -17,5 +18,6 @@
       </p>
     </section>
     <script src="src/thermostat.js"></script>
+    <script src="../interface.js"></script>
   </body>
 </html>
