--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/css/styles.css"/>
+    <link rel="stylesheet" href="/Users/zsuzsannaver/OneDrive - Supver Ltd/Makers/thermostat/thermostat_js/css/styles.css"/>
     <title>Thermostat</title>
   </head>
   <body>
-      <h1>My thermostat</h1>
+      <h1>Joomin's thermostat</h1>
     <section>
-      <h1 id="temperature"></h1>
+      <h1 id="temperature"><
+        <h2>Celsius</h2></h1>
       <p>
         <button id="temperature-up">+</button>
         <button id="temperature-down">-</button>
@@ -17,7 +18,7 @@
         <button id="powersaving-off">PSM off</button>
       </p>
     </section>
-    <script src="src/thermostat.js"></script>
-    <script src="../interface.js"></script>
+    <script src="/Users/zsuzsannaver/OneDrive - Supver Ltd/Makers/thermostat/thermostat_js/src/thermostat.js"></script>
+    <script src="/Users/zsuzsannaver/OneDrive - Supver Ltd/Makers/thermostat/thermostat_js/interface.js"></script>
   </body>
 </html>
