--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
       <h1>Joomin's thermostat</h1>
     <section>
-      <h1 id="temperature"><
+      <h1>Current temperature: <span id="current-temperature"></span></h1>
+      <h1 id="temperature">
         <h2>Celsius</h2></h1>
       <p>
         <button id="temperature-up">+</button>
@@ -17,6 +18,16 @@
         <button id="powersaving-on">PSM on</button>
         <button id="powersaving-off">PSM off</button>
       </p>
+       <!-- <select id="current-city">
+        <option value="London">London</option>
+        <option value="New york">New York</option>
+        <option value="Paris">Paris</option>
+        <option value="Tokyo">Tokyo</option> -->
+
+        <form id="select-city">
+          <input id="current-city" type="text" placeholder="Enter a city"></input>
+          <input type="submit"></input>
+        </form>
     </section>
     <script src="/Users/zsuzsannaver/OneDrive - Supver Ltd/Makers/thermostat/thermostat_js/src/thermostat.js"></script>
     <script src="/Users/zsuzsannaver/OneDrive - Supver Ltd/Makers/thermostat/thermostat_js/interface.js"></script>
