--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <title>Thermostat</title>
   </head>
   <body>
-      <h1>Joomin's thermostat</h1>
+      <h1>Zsuzsanna's thermostat</h1>
     <section>
-      <h1>Current temperature: <span id="current-temperature"></span></h1>
-      <h1 id="temperature">
-        <h2>Celsius</h2></h1>
+      
+      <h2>Current temperature in your room: <span id="temperature"></span> °C </span></h2>
       <p>
         <button id="temperature-up">+</button>
         <button id="temperature-down">-</button>
@@ -24,10 +23,17 @@
         <option value="Paris">Paris</option>
         <option value="Tokyo">Tokyo</option> -->
 
+        <br>
+        <br>
+
+        <h3>Where you want to go? 
+          Please type here:</h3>
+
         <form id="select-city">
           <input id="current-city" type="text" placeholder="Enter a city"></input>
           <input type="submit"></input>
         </form>
+        <h3>Current temperature in your city: <span id="current-temperature"></span></h3>
     </section>
     <script src="/Users/zsuzsannaver/OneDrive - Supver Ltd/Makers/thermostat/thermostat_js/src/thermostat.js"></script>
     <script src="/Users/zsuzsannaver/OneDrive - Supver Ltd/Makers/thermostat/thermostat_js/interface.js"></script>
